v9.5
+ Added /tpto command! Tp to coordinates!

v9.4
+ Added /item command! Give yourself any item! And you can specify the amount!
+ Added /give command! Give any player any amount of any item!
+ Added /hat command! Make what your holding your head!
+ Added /mute command! Mute a player from talking!
+ Added /unmute command! Unmutes a player!
+ Added /exp Command!(or /level, or /xp) Give players exp!
+ Added /world command! Teleport between worlds!
+ Added /ping command! Pong!
+ Added /workbench command!(or /bench) open a workbench without having one!
* A new file will be created called MutedPlayers.txt
* Fixed errors.

v9.3
* Fixed new bugs with new commands.
* Fixed misspellings.
* Changed some colors with new commands.

v9.2
+ Added /home command. Teleport to your home.
+ Added /sethome command! set your home where your standing.
+ Added warp command! warp to a specified warp.
+ Added setwarp command! Create a warp!
+ Added delwarp commands! delete a specified warp!
+ Added kickall command! kick everyone except you!
+ Added kill command! kill a specified player!
+ Added message on login when there is an update available.
* Now when using /sm mobs will spawn where you are pointing.
* Changed Mob code.
* New file will be created to store warp data.
* Fixed colors in commands.
* Fixed errors with certain commands.
* Added notaro.* permission! Gives you all commands!

v9.1
+ Added /enderchest command! View a players ender chest.
+ Added /lightning command! Strike lightning where your pointing, or a specified player.
+ Added /info command! Check the info of a player.
+ Added /who command! see who is online.
+ Added /updateChecker command. type true or false to enable/disable UpdateChecker.
* A new file called UpdateChecker.txt is created.
* Changed file name in "Hide"
* Changed file name in "TpBlock"
* Changed method names in Hide, and TpBlock.
* Changed logger name to "Log"
* Changed name in updateChecker.
* Changed code in Main.