@@ -1,5 +1,7 @@
 package notaro.chatcommands.commands;
 
+import notaro.chatcommands.ChatCommands;
+
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.command.Command;
@@ -8,6 +10,11 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
 
 public class Ban implements CommandExecutor{
+
+	private ChatCommands plugin;
+	public Ban(ChatCommands plugin){
+		this.plugin = plugin;
+	}
 
 	@Override
 	public boolean onCommand(CommandSender sender, Command cmd, String label, String[] args) {
@@ -18,23 +25,22 @@ public class Ban implements CommandExecutor{
 		Player player = (Player) sender;
 		if(cmd.getName().equalsIgnoreCase("ban")){
 			if(sender.hasPermission("notaro.ban") || player.hasPermission("notaro.*")){
-				if(sender instanceof Player){
-					if(args.length != 0){
-						int i = 1;
-						int para = args.length;
-						String MSG = "";
-						while(i < para){
-							MSG = MSG + " " + args[i];
-							i++;
-						}
-						Player target = Bukkit.getPlayer(args[0]);
-						target.setBanned(true);
-						target.kickPlayer(ChatColor.DARK_RED + "BANNED!" + ChatColor.AQUA + " Reason: " + ChatColor.RED + MSG);
-						Bukkit.getServer().broadcastMessage(ChatColor.RED + target.getName() + " has been banned by " + player.getName());
+				if(args.length != 0){
+					int i = 1;
+					int para = args.length;
+					String MSG = "";
+					while(i < para){
+						MSG = MSG + " " + args[i];
+						i++;
 					}
-				}else{
-					player.sendMessage(ChatColor.RED + "You need the permission: " + ChatColor.DARK_GREEN + "notaro.ban " + ChatColor.RED + "to perform this command.");
+					Player target = Bukkit.getPlayer(args[0]);
+					plugin.KickedPlayers.add(target.getName());
+					target.setBanned(true);
+					target.kickPlayer(ChatColor.DARK_RED + "BANNED!" + ChatColor.AQUA + " Reason: " + ChatColor.RED + MSG);
+					Bukkit.getServer().broadcastMessage(ChatColor.RED + target.getName() + " has been banned by " + player.getName());
 				}
+			}else{
+				player.sendMessage(ChatColor.RED + "You need the permission: " + ChatColor.DARK_GREEN + "notaro.ban " + ChatColor.RED + "to perform this command.");
 			}
 		}
 		return false;
